[package]
name = "hetzner-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }


my-http-server = { tag = "0.5.0", git = "https://github.com/MyJetTools/my-http-server.git", features = [
    "my-telemetry",
    "cache-headers-before-receive-body",
] }
hetzner-client = { git = "https://github.com/RomanSavh/hetzner-client", tag = "0.1.1" }
service-sdk = { git = "https://github.com/MyJetTools/service-sdk.git", tag = "0.1.7" }
my-http-server-controllers = { tag = "0.5.0", git = "https://github.com/MyJetTools/my-http-server-controllers.git" }
my-http-server-swagger = { tag = "0.5.0", git = "https://github.com/MyJetTools/my-http-server-swagger.git" }
my-settings-reader = { tag = "0.1.5", git = "https://github.com/MyJetTools/my-settings-reader.git", features = [
    "background-reader",
] }
flurl = { git = "https://github.com/MyJetTools/fl-url.git", tag = "0.2.5" }
my-telemetry-writer = { tag = "0.3.0", git = "https://github.com/MyJetTools/my-telemetry-writer.git" }

async-trait = "*"
serde = "*"
serde_yaml = "*"
serde_json = "*"
convert_case = "0.6.0"
